# scholartools

./: .gitignore  .mcpbignore  CHANGELOG.md  CLAUDE.md  README.md  claude-progress.txt  conftest.py  feature_list.json  init.sh  install-skills.ps1  install-skills.sh  install.ps1  install.sh  manifest.json  pyproject.toml
.build/: install.ps1  install.sh  pyinstaller.spec
.claude/: settings.json
.claude/agents/: architect.md  developer.md  initializer.md  reviewer.md
.github/workflows/: build-release.yml  deploy-site.yml
docs/: DESIGN.md  getting-started.es.md  getting-started.md  product.md  remote-setup.md  structure.md  tech.md  vision.md
docs/adr/: 001-hexagonal-result-types.md  002-pdf-extraction.md  003-httpx.md  004-pydantic-all-the-way.md
docs/feats/: 001-core-library.md  002-staging-workflow.md  003-list-pagination.md  004-local-filter.md  005-configurable-citekeys.md  006-deduplication.md  007-peer-management.md  008-distributed-sync-phase1.md  009-blob-sync.md  010-role-logic.md  013-mcp-server.md  014-cli-build.md  021-file-management-refactor.md  025-skills-zip-distribution.md  026-wiki-layer.md
docs/specs/: 009-blob-sync.md  (+25 more)
evals/: rubric.md
loretools/: __init__.py  models.py
scholartools/: __init__.py  _shell.py  config.py  mcp_server.py  models.py
scripts/: backfill_uid.py  bootstrap_identity.py  migrate_library.py
site/: index.css  index.html
specs/: 001-core-library.md  002-staging-workflow.md  004-local-filter.md  008-peer-management.md  011-local-file-progressive-enhancement.md  014-cli-build.md  018-cli-build.md  _template.md
(+114 files in other folders)
