[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scholartools"
version = "0.8.3"
description = "Agent-first academic reference management library — idearium fork"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "pdfplumber>=0.11",
    "anthropic>=0.40",
    "cryptography>=42.0",
]

[project.scripts]
scht = "scholartools.cli:main"

[project.optional-dependencies]
sync = ["boto3>=1.34"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["scholartools"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: live network + API keys required (deselect with -m 'not integration')"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
